---------------------------------------------------------------------------------------------------
Version: 2.7.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: 2021-05-03
  Features:
    - Added an option to show disabled recipes and technologies
    - Added indicators for when a recipe or technology is disabled
    - Added researched state for labs and offshore pumps
  Changes:
    - Disabled recipes and technologies are hidden by default
    - When a fluid has multiple temperatures, the default temperature will be displayed for fluid products that usually have no temperature
  Bugfixes:
    - Fixed a crash when using the hotkey on a science lab
    - Fixed fluids not being enabled at start even if their offshore pump was
    - Fixed fluid temperature variants not copying recipe categories from their parents
    - Fixed fluid variant ingredient in lists being completely wrong in most cases
    - Fixed several inconsistencies with fluid temperature variation researched status
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2021-04-05
  Features:
    - Added generic object opening support
      - Hovering over any crafter, fluid, item, recipe, or technology anywhere in the game and using the Recipe Book hotkey will open that object's page
    - Added fuel pollution, vehicle acceleration, and vehicle top speed multipliers to item tooltips
    - Added tooltips to close buttons
  Bugfixes:
    - Fixed a crash if another mod updated a new technology in on_configuration_changed before Recipe Book refreshed its data
    - Fixed a crash when a required fluid for mining was unresearched and "show unresearched objects" was off
    - Fixed a crash when using "%" in search in some situations