@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.7.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when a new force was created
 ---------------------------------------------------------------------------------------------------
 Version: 2.7.0
 Date: 2021-05-03
